Changes to squid-1.1.beta24 ():

	- Added 'cache_stoplist_pattern' to squid.conf
	- Remove trailing slashes from FTP URLs.
	- Added 'passthrough_proxy' support.

Changes to squid-1.1.beta23 (November 25, 1996):

	- Fixed "viabuf" memory leak.

Changes to squid-1.1.beta22 (November 25, 1996):

	- Fixed xstrncpy() bug in mime_get_header().
	- Fixed Via: header.
	- Fixed Host: header for proxy requests.
	- Fixed re-initializing client_db and net_db hash tables upon
	  SIGHUP (Cord Beermann).
	- Mucked with regex stuff so HP users don't have to put up with
	  GNUregex (Markus Gyger).
	- Changed SQUID_MAXFD back to FD_SETSIZE.
	- Fixed checking Max-age in httpSendRequest().
	- Made failure to fork ftpget fatal.
	- Call *FreeMemory() routines only if debugging.

Changes to squid-1.1.beta21 (November 22, 1996):

	- Fixed setting entry->timestamp for NOT MODIFIED replies.
	- Changed old HTTP/1.1 Forwarded: header to new Via:.
	- Changed urlCheckRequest() to allow all FTP requests, including
	  PUT which should get handled by the passthrough module.
	- Fixed needlessly calling storeSwapFullPath() in
	  storeSwapOutHandle() (Mark Treacy).
	- Simplified hash linking (Mark Treacy).
	- Write pid_filename by default (Markus Gyger).
	- Changed "Invalid dnsserver output" to non-fatal debug_trap()
	  (Joe Ramey).
	- Changed STORE_IN_MEM_BUCKETS to the prime 229 (Neil Murray).
	- Changed FD_SETSIZE to SQUID_MAXFD (Jonathan Larmour).
	- Strip :port from Host: header if present.
	- Reschedule fqdncache_dnsHandleRead() to prevent dnsservers
	  from getting stuck (Makoto Ishisone).
	- Fixed handing SSL requests inside firewalls (Akira Sato).
	- Fixed passthrough neighbor selection bug (Akira Sato).
	- Removed 'post_buf' stuff from http.c.

Changes to squid-1.1.beta20 (November 17, 1996):

	- Changed neighbor_domain_type to neighbor_type_domain in
	  squid.conf.
	- Changed all 'xstrerror' debug messages to section 50.
	- More const fixes (Markus Gyger).